# pau

./: Cargo.toml  PHILOSOPHY.md  README.md  ROADMAP.md
docs/: arrays.md  booleans.md  conditionals.md  constants.md  functions.md  guide.md  integers_and_floats.md  naming_conventions.md  operators.md  structs.md  variables.md  while_loops.md
examples/: 01_variables.pau  02_multiple_assignments.pau  03_conditionals.pau  04_comments.pau  05_while_loops.pau  06_functions.pau  07_recursion.pau  08_fib.pau  09_factorial.pau  10_diagnostics.pau  11_arrays.pau  12_matrix.pau  13_structs.pau  14_circular_types.pau  15_constants.pau  16_bit_ops.pau  17_log_ops.pau  18_unsized_array.pau  main.pau  variables.pau
src/: cli.rs  diag.rs  main.rs  operator.rs  span.rs
src/lexer/: mod.rs  token.rs
src/middleend/: mod.rs
src/parser/: ast.rs  mod.rs  ty.rs
src/pil/: mod.rs
src/semantics/: mod.rs  scope.rs  symbol.rs  ty.rs
