[package]
name = "pau"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
cranelift = "0.128.3"
cranelift-codegen = "0.128.3"
cranelift-frontend = "0.128.3"
cranelift-module = "0.128.3"
cranelift-native = "0.128.3"
cranelift-object = "0.128.3"
strsim = "0.11.1"
which = "8.0.0"
